[gd_scene load_steps=56 format=2]

[ext_resource path="res://spoo_world/world/levels/level5/level5.gd" type="Script" id=2]
[ext_resource path="res://spoo_world/assets/img/spoo/Derecho_Cerrado.png" type="Texture" id=3]
[ext_resource path="res://spoo_world/assets/icon/moneda2.png" type="Texture" id=4]
[ext_resource path="res://spoo_world/assets/icon/label.png" type="Texture" id=5]
[ext_resource path="res://spoo_world/assets/icon/arrow_back50.png" type="Texture" id=6]
[ext_resource path="res://spoo_world/assets/icon/block_night.png" type="Texture" id=8]
[ext_resource path="res://spoo_world/assets/img/fondo_level5.png" type="Texture" id=9]
[ext_resource path="res://spoo_world/assets/icon/kitty/kitty1.png" type="Texture" id=10]
[ext_resource path="res://spoo_world/assets/typography/GameOfSquids-1GMVL.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://spoo_world/assets/icon/music.png" type="Texture" id=18]
[ext_resource path="res://spoo_world/assets/audio/level5.mp3" type="AudioStream" id=19]
[ext_resource path="res://spoo_world/assets/icon/nomusic.png" type="Texture" id=20]
[ext_resource path="res://spoo_world/assets/icon/arrow_start.png" type="Texture" id=21]
[ext_resource path="res://spoo_world/assets/icon/bloque touch/bloque_touch.png" type="Texture" id=22]
[ext_resource path="res://spoo_world/assets/icon/bloque touch/bloque_touch-63.png" type="Texture" id=23]
[ext_resource path="res://spoo_world/assets/icon/bloque touch/bloque_touch-68.png" type="Texture" id=24]
[ext_resource path="res://spoo_world/assets/icon/bloque touch/bloque_touch-65.png" type="Texture" id=25]
[ext_resource path="res://spoo_world/assets/icon/bloque touch/bloque_touch-64.png" type="Texture" id=26]
[ext_resource path="res://spoo_world/assets/icon/bloque touch/bloque_touch-61.png" type="Texture" id=27]
[ext_resource path="res://spoo_world/assets/icon/bloque touch/bloque_touch-62.png" type="Texture" id=28]
[ext_resource path="res://spoo_world/assets/icon/bloque touch/bloque_touch-67.png" type="Texture" id=29]
[ext_resource path="res://spoo_world/assets/icon/bloque touch/bloque_touch-66.png" type="Texture" id=30]
[ext_resource path="res://spoo_world/assets/icon/kitty/kitty2.png" type="Texture" id=31]
[ext_resource path="res://spoo_world/assets/icon/lianas_night1.png" type="Texture" id=32]
[ext_resource path="res://spoo_world/assets/typography/SPOOKY MONSTER .ttf" type="DynamicFontData" id=33]
[ext_resource path="res://spoo_world/assets/img/spoo/Derecho_Abierto.png" type="Texture" id=34]
[ext_resource path="res://spoo_world/world/levels/level5/spoo1.gd" type="Script" id=35]

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 50, 70 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 50, 70 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 50, 70 )

[sub_resource type="DynamicFont" id=21]
size = 25
font_data = ExtResource( 17 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 624, 47 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 35.375, 396 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=28]
radius = 16.0

[sub_resource type="Animation" id=29]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=30]
resource_name = "coin"
length = 0.7
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36, 0.48, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=31]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=32]
resource_name = "coin"
length = 0.7
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36, 0.48, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=33]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=34]
resource_name = "coin"
length = 0.7
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36, 0.48, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=35]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=36]
resource_name = "coin"
length = 0.7
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36, 0.48, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=37]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=38]
resource_name = "coin"
length = 0.7
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36, 0.48, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 36, 4 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 30 ), ExtResource( 25 ), ExtResource( 29 ), ExtResource( 24 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 28 ), ExtResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=26]
size = 30
font_data = ExtResource( 33 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 44.25, 44 )

[sub_resource type="RectangleShape2D" id=46]
extents = Vector2( 44, 4 )

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 42.5, 44.5 )

[sub_resource type="DynamicFont" id=39]
size = 30
font_data = ExtResource( 33 )

[sub_resource type="PhysicsMaterial" id=45]
bounce = 0.01

[sub_resource type="SpriteFrames" id=43]
animations = [ {
"frames": [ ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 34 ), ExtResource( 3 ) ],
"loop": true,
"name": "ojos",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 32, 50 )

[node name="level5" type="Node2D"]
script = ExtResource( 2 )

[node name="fondo" type="Sprite" parent="."]
position = Vector2( 640.75, 400.125 )
scale = Vector2( 1.00195, 0.939918 )
texture = ExtResource( 9 )

[node name="back" type="Button" parent="."]
margin_left = 36.0
margin_top = 21.0
margin_right = 99.0
margin_bottom = 86.0
focus_mode = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="points" type="Sprite" parent="."]
position = Vector2( 368, 59 )
scale = Vector2( 2.29744, 0.82381 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="label_point" type="Label" parent="."]
margin_left = 224.0
margin_top = 48.0
margin_right = 319.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 21 )
text = "0 / 15"

[node name="Timer" type="Timer" parent="."]
wait_time = 1.2

[node name="abajo" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="abajo"]
position = Vector2( 624, 953 )
shape = SubResource( 20 )

[node name="AudioFondo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
autoplay = true

[node name="TButton_Music" type="TextureButton" parent="."]
margin_left = 1196.0
margin_top = 21.0
margin_right = 1256.0
margin_bottom = 82.0
toggle_mode = true
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 20 )
expand = true

[node name="start" type="TextureButton" parent="."]
margin_left = 632.0
margin_top = 133.0
margin_right = 739.0
margin_bottom = 227.0
texture_normal = ExtResource( 21 )
expand = true

[node name="borde_v" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="borde_v"]
position = Vector2( 1316, 406 )
shape = SubResource( 22 )

[node name="kitty" type="AnimatedSprite" parent="."]
position = Vector2( 1032, 312 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 27 )
frame = 10
playing = true

[node name="LianasNight1" type="Sprite" parent="."]
position = Vector2( 1024, 328 )
scale = Vector2( 1.00195, 0.939918 )
texture = ExtResource( 32 )

[node name="moneda1" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -8 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="moneda1"]
position = Vector2( 280, 424 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
flip_h = true
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="moneda1"]
position = Vector2( 280, 424 )
shape = SubResource( 28 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="moneda1"]
autoplay = "coin"
anims/RESET = SubResource( 29 )
anims/coin = SubResource( 30 )

[node name="moneda2" type="Area2D" parent="."]
visible = false
position = Vector2( 184, 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="moneda2"]
position = Vector2( 280, 424 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
flip_h = true
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="moneda2"]
position = Vector2( 280, 424 )
shape = SubResource( 28 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="moneda2"]
autoplay = "coin"
anims/RESET = SubResource( 31 )
anims/coin = SubResource( 32 )

[node name="moneda3" type="Area2D" parent="."]
visible = false
position = Vector2( 352, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="moneda3"]
position = Vector2( 280, 424 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
flip_h = true
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="moneda3"]
position = Vector2( 280, 424 )
shape = SubResource( 28 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="moneda3"]
autoplay = "coin"
anims/RESET = SubResource( 33 )
anims/coin = SubResource( 34 )

[node name="moneda4" type="Area2D" parent="."]
visible = false
position = Vector2( 528, 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="moneda4"]
position = Vector2( 280, 424 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
flip_h = true
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="moneda4"]
position = Vector2( 280, 424 )
shape = SubResource( 28 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="moneda4"]
autoplay = "coin"
anims/RESET = SubResource( 35 )
anims/coin = SubResource( 36 )

[node name="moneda5" type="Area2D" parent="."]
visible = false
position = Vector2( 712, 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="moneda5"]
position = Vector2( 280, 424 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
flip_h = true
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="moneda5"]
position = Vector2( 280, 424 )
shape = SubResource( 28 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="moneda5"]
autoplay = "coin"
anims/RESET = SubResource( 37 )
anims/coin = SubResource( 38 )

[node name="bloque_r1" type="RigidBody2D" parent="."]
position = Vector2( 288, 504 )
mass = 10.0
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="area_b1" type="Area2D" parent="bloque_r1"]

[node name="base" type="CollisionShape2D" parent="bloque_r1/area_b1"]
position = Vector2( -4, -60 )
shape = SubResource( 42 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="bloque_r1"]
scale = Vector2( 0.78, 0.77375 )
frames = SubResource( 23 )
frame = 14
speed_scale = 2.0

[node name="Label" type="Label" parent="bloque_r1"]
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 26 )
text = "10"
align = 1
valign = 1

[node name="CollisionShape2D2" type="CollisionShape2D" parent="bloque_r1"]
position = Vector2( -4.25, 4 )
shape = SubResource( 24 )

[node name="b_b1" type="TextureButton" parent="bloque_r1"]
margin_left = -40.0
margin_top = -16.0
margin_right = 40.0
margin_bottom = 48.0

[node name="bloque_s" type="StaticBody2D" parent="bloque_r1"]
position = Vector2( -272, -504 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bloque_r1/bloque_s"]
position = Vector2( 268, 460 )
shape = SubResource( 46 )

[node name="bloque_r2" type="RigidBody2D" parent="."]
position = Vector2( 464, 520 )
mass = 10.0
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="area_b2" type="Area2D" parent="bloque_r2"]

[node name="base" type="CollisionShape2D" parent="bloque_r2/area_b2"]
position = Vector2( -4, -60 )
shape = SubResource( 42 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="bloque_r2"]
scale = Vector2( 0.78, 0.77375 )
frames = SubResource( 23 )
frame = 1
speed_scale = 2.0

[node name="Label" type="Label" parent="bloque_r2"]
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 26 )
text = "10"
align = 1
valign = 1

[node name="CollisionShape2D2" type="CollisionShape2D" parent="bloque_r2"]
position = Vector2( -4.25, 4 )
shape = SubResource( 24 )

[node name="b_b2" type="TextureButton" parent="bloque_r2"]
margin_left = -40.0
margin_top = -16.0
margin_right = 40.0
margin_bottom = 48.0

[node name="bloque_s" type="StaticBody2D" parent="bloque_r2"]
position = Vector2( -272, -504 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bloque_r2/bloque_s"]
position = Vector2( 268, 460 )
shape = SubResource( 46 )

[node name="bloque_r3" type="RigidBody2D" parent="."]
position = Vector2( 640, 520 )
mass = 10.0
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="area_b3" type="Area2D" parent="bloque_r3"]

[node name="base" type="CollisionShape2D" parent="bloque_r3/area_b3"]
position = Vector2( -4, -60 )
shape = SubResource( 42 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="bloque_r3"]
scale = Vector2( 0.78, 0.77375 )
frames = SubResource( 23 )
frame = 1
speed_scale = 2.0

[node name="Label" type="Label" parent="bloque_r3"]
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 26 )
text = "10"
align = 1
valign = 1

[node name="CollisionShape2D2" type="CollisionShape2D" parent="bloque_r3"]
position = Vector2( -4.25, 4 )
shape = SubResource( 24 )

[node name="b_b3" type="TextureButton" parent="bloque_r3"]
margin_left = -40.0
margin_top = -16.0
margin_right = 40.0
margin_bottom = 48.0

[node name="bloque_s" type="StaticBody2D" parent="bloque_r3"]
position = Vector2( -272, -504 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bloque_r3/bloque_s"]
position = Vector2( 268, 460 )
shape = SubResource( 46 )

[node name="bloque_r4" type="RigidBody2D" parent="."]
position = Vector2( 816, 528 )
mass = 10.0
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="area_b4" type="Area2D" parent="bloque_r4"]

[node name="base" type="CollisionShape2D" parent="bloque_r4/area_b4"]
position = Vector2( -4, -60 )
shape = SubResource( 42 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="bloque_r4"]
scale = Vector2( 0.78, 0.77375 )
frames = SubResource( 23 )
frame = 12
speed_scale = 2.0

[node name="Label" type="Label" parent="bloque_r4"]
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 26 )
text = "10"
align = 1
valign = 1

[node name="CollisionShape2D2" type="CollisionShape2D" parent="bloque_r4"]
position = Vector2( -4.25, 4 )
shape = SubResource( 24 )

[node name="b_b4" type="TextureButton" parent="bloque_r4"]
margin_left = -40.0
margin_top = -16.0
margin_right = 40.0
margin_bottom = 48.0

[node name="bloque_s" type="StaticBody2D" parent="bloque_r4"]
position = Vector2( -272, -504 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bloque_r4/bloque_s"]
position = Vector2( 268, 460 )
shape = SubResource( 46 )

[node name="bloque_r5" type="RigidBody2D" parent="."]
position = Vector2( 1000, 520 )
mass = 10.0
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="area_b5" type="Area2D" parent="bloque_r5"]

[node name="base" type="CollisionShape2D" parent="bloque_r5/area_b5"]
position = Vector2( -4, -60 )
shape = SubResource( 42 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="bloque_r5"]
scale = Vector2( 0.78, 0.77375 )
frames = SubResource( 23 )
frame = 3
speed_scale = 2.0

[node name="Label" type="Label" parent="bloque_r5"]
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 26 )
text = "10"
align = 1
valign = 1

[node name="CollisionShape2D2" type="CollisionShape2D" parent="bloque_r5"]
position = Vector2( -4.25, 4 )
shape = SubResource( 24 )

[node name="b_b5" type="TextureButton" parent="bloque_r5"]
margin_left = -40.0
margin_top = -16.0
margin_right = 40.0
margin_bottom = 48.0

[node name="bloque_s" type="StaticBody2D" parent="bloque_r5"]
position = Vector2( -272, -504 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bloque_r5/bloque_s"]
position = Vector2( 268, 460 )
shape = SubResource( 46 )

[node name="b0" type="StaticBody2D" parent="."]
position = Vector2( -160, 224 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="b0"]
position = Vector2( 264, 264 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="b0"]
position = Vector2( 261.5, 267.5 )
shape = SubResource( 41 )

[node name="Label" type="Label" parent="b0"]
margin_left = 224.0
margin_top = 256.0
margin_right = 304.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 39 )
text = "0"
align = 1
valign = 1

[node name="b1" type="StaticBody2D" parent="."]
position = Vector2( 920, 248 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="b1"]
position = Vector2( 264, 264 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="b1"]
position = Vector2( 261.5, 267.5 )
shape = SubResource( 41 )

[node name="Label" type="Label" parent="b1"]
margin_left = 224.0
margin_top = 256.0
margin_right = 304.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 39 )
text = "0"
align = 1
valign = 1

[node name="spoo1" type="RigidBody2D" parent="."]
position = Vector2( 96, 328 )
mass = 15.0
physics_material_override = SubResource( 45 )
gravity_scale = 9.8
script = ExtResource( 35 )
__meta__ = {
"_edit_group_": true
}

[node name="animated_spoo" type="AnimatedSprite" parent="spoo1"]
scale = Vector2( 0.06, 0.06 )
frames = SubResource( 43 )
animation = "ojos"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="spoo1"]
position = Vector2( 0, -2 )
shape = SubResource( 44 )

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="timeout" from="Timer" to="spoo1" method="_on_Timer_timeout"]
[connection signal="body_exited" from="abajo" to="." method="_on_abajo_body_exited"]
[connection signal="pressed" from="TButton_Music" to="." method="_on_TButton_Music_pressed"]
[connection signal="pressed" from="start" to="spoo1" method="_on_start_pressed"]
[connection signal="body_entered" from="borde_v" to="." method="_on_borde_v_body_entered"]
[connection signal="body_entered" from="moneda1" to="." method="_on_moneda1_body_entered"]
[connection signal="body_entered" from="moneda2" to="." method="_on_moneda2_body_entered"]
[connection signal="body_entered" from="moneda3" to="." method="_on_moneda3_body_entered"]
[connection signal="body_entered" from="moneda4" to="." method="_on_moneda4_body_entered"]
[connection signal="body_entered" from="moneda5" to="." method="_on_moneda5_body_entered"]
[connection signal="body_entered" from="bloque_r1/area_b1" to="." method="_on_area_b1_body_entered"]
[connection signal="pressed" from="bloque_r1/b_b1" to="." method="_on_b_b1_pressed"]
[connection signal="body_entered" from="bloque_r2/area_b2" to="." method="_on_area_b2_body_entered"]
[connection signal="pressed" from="bloque_r2/b_b2" to="." method="_on_b_b2_pressed"]
[connection signal="body_entered" from="bloque_r3/area_b3" to="." method="_on_area_b3_body_entered"]
[connection signal="pressed" from="bloque_r3/b_b3" to="." method="_on_b_b3_pressed"]
[connection signal="body_entered" from="bloque_r4/area_b4" to="." method="_on_area_b4_body_entered"]
[connection signal="pressed" from="bloque_r4/b_b4" to="." method="_on_b_b4_pressed"]
[connection signal="body_entered" from="bloque_r5/area_b5" to="." method="_on_area_b5_body_entered"]
[connection signal="pressed" from="bloque_r5/b_b5" to="." method="_on_b_b5_pressed"]
